practica con struts validator

--- a/src/main/resources/Common.properties
+++ b/src/main/resources/Common.properties
@@ -1,7 +1,43 @@
-#common module error message
-error.common.name.required = Name is required
+##common module error message
+#error.common.name.required = Name is required
+#
+##common module label message
+#label.common.name = UserName
+#label.common.password = Password
+#label.common.button.submit = Submit
+#label.common.button.reset = Reset
 
-#common module label message
-label.common.name = UserName
-label.common.button.submit = Submit
-label.common.button.reset = Reset
+#user module label message
+label.user.name = Name
+label.user.username = UserName
+label.user.pwd = Password
+label.user.pwd2 = Confirm Password
+label.user.email = Email
+
+label.user.button.submit = Submit
+
+#Error message
+err.user.username.required = Username is required.<br/>
+err.user.username.length = Username length should be between {0} and {1}.<br/>
+err.user.username.invalid = Username is invalid , it should be a-z, A-Z, 0-9, dash "-" or underscore "_".<br/>
+
+err.user.pwd.required = Password is required.<br/>
+err.user.pwd.length = Password length should be between {0} and {1}.<br/>
+err.user.pwd.invalid = Password is invalid , it should be a-z, A-Z, 0-9.<br/>
+
+err.user.pwd2.notmatch = Confirm password is not match.<br/>
+
+err.user.email.required = Email is required.<br/>
+err.user.email.invalid =  Email address is invalid.<br/>
+
+errors.required = campo requerido
+errors.minlength = minima longituid
+errors.maxlength = maxtima longitud
+errors.invalid = invalido
+errors.byte = errors.byte
+errors.short = errors.short
+
+errors.security = errors.security
+errors.norol = estas pillao mandando el rol por debajo rata
+
+error.common.name.required = username is required
